--- a/appspec.yml
+++ b/appspec.yml
@@ -5,6 +5,6 @@ files:
     destination: /home/ec2-user/app/
 hooks:
   ApplicationStart:
-    - location: scripts/deploy-compose.sh
+    - location: scripts/deploy.sh
       timeout: 60
       runas: ec2-user
