--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -44,5 +44,15 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
+
+        location /api/user/ {
+            rewrite ^/api/user/(.*) /api/$1 break;
+            proxy_pass http://tp-user-api:8080;
+            
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
     }
 }
